--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "mixedbread-ai-provider",
-  "version": "0.0.3",
+  "version": "0.0.4",
   "description": "Mixedbread AI Provider for running Mixedbread AI models with Vercel AI SDK",
   "author": "Vivek Patel <me@patelvivek.dev>",
   "license": "Apache-2.0",
@@ -41,8 +41,8 @@
     }
   },
   "dependencies": {
-    "@ai-sdk/provider": "0.0.26",
-    "@ai-sdk/provider-utils": "1.0.22"
+    "@ai-sdk/provider": "^0.0.26",
+    "@ai-sdk/provider-utils": "^1.0.22"
   },
   "devDependencies": {
     "@changesets/cli": "^2.27.9",
