--- a/package.json
+++ b/package.json
@@ -1,13 +1,14 @@
 {
   "name": "mixedbread-ai-provider",
-  "version": "0.0.4",
+  "version": "1.0.0",
   "description": "Mixedbread AI Provider for running Mixedbread AI models with Vercel AI SDK",
   "author": "Vivek Patel <me@patelvivek.dev>",
   "license": "Apache-2.0",
   "keywords": [
     "ai",
     "vercel-ai",
-    "mixedbread"
+    "mixedbread",
+    "embeddings"
   ],
   "main": "./dist/index.js",
   "module": "./dist/index.mjs",
@@ -41,8 +42,8 @@
     }
   },
   "dependencies": {
-    "@ai-sdk/provider": "^0.0.26",
-    "@ai-sdk/provider-utils": "^1.0.22"
+    "@ai-sdk/provider": "^1.0.0",
+    "@ai-sdk/provider-utils": "^2.0.0"
   },
   "devDependencies": {
     "@changesets/cli": "^2.27.9",
@@ -52,7 +53,7 @@
     "tsup": "^8.3.5",
     "typescript": "5.5.4",
     "vite-tsconfig-paths": "^4.3.2",
-    "vitest": "^2.1.4",
+    "vitest": "^2.1.5",
     "zod": "^3.23.8"
   },
   "peerDependencies": {
