--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
   "name": "mixedbread-ai-provider",
-  "version": "1.0.2",
+  "version": "1.1.0",
   "description": "Mixedbread AI Provider for running Mixedbread AI models with Vercel AI SDK",
   "author": "Vivek Patel <me@patelvivek.dev>",
-  "license": "Apache-2.0",
+  "license": "MIT",
   "keywords": [
     "ai",
     "vercel-ai",
@@ -42,19 +42,19 @@
     }
   },
   "dependencies": {
-    "@ai-sdk/provider": "^1.0.0",
-    "@ai-sdk/provider-utils": "^2.0.0"
+    "@ai-sdk/provider": "^1.1.3",
+    "@ai-sdk/provider-utils": "^2.2.8"
   },
   "devDependencies": {
-    "@changesets/cli": "^2.27.9",
+    "@changesets/cli": "^2.29.5",
     "@edge-runtime/vm": "^3.2.0",
-    "@types/node": "^18.19.64",
-    "prettier": "^3.3.3",
-    "tsup": "^8.3.5",
+    "@types/bun": "^1.2.17",
+    "prettier": "^3.6.2",
+    "tsup": "^8.5.0",
     "typescript": "5.5.4",
     "vite-tsconfig-paths": "^4.3.2",
-    "vitest": "^2.1.5",
-    "zod": "^3.23.8"
+    "vitest": "^2.1.9",
+    "zod": "^3.25.69"
   },
   "peerDependencies": {
     "zod": "^3.0.0"
