--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "mixedbread-ai-provider",
-  "version": "1.1.1",
+  "version": "2.0.0-beta.0",
   "description": "Mixedbread AI Provider for running Mixedbread AI models with Vercel AI SDK",
   "author": "Vivek Patel <me@patelvivek.dev>",
   "license": "MIT",
@@ -31,7 +31,11 @@
     "test:node": "vitest --config vitest.node.config.js --run",
     "ci": "bun run build && bun run check-format && bun run test",
     "local-release": "changeset version && changeset publish",
-    "prepublishOnly": "npm run ci"
+    "prepublishOnly": "npm run ci",
+    "prerelease:enter": "changeset pre enter",
+    "prerelease:exit": "changeset pre exit",
+    "prerelease:version": "changeset version",
+    "prerelease:publish": "changeset publish"
   },
   "exports": {
     "./package.json": "./package.json",
@@ -42,8 +46,8 @@
     }
   },
   "dependencies": {
-    "@ai-sdk/provider": "^1.1.3",
-    "@ai-sdk/provider-utils": "^2.2.8"
+    "@ai-sdk/provider": "beta",
+    "@ai-sdk/provider-utils": "beta"
   },
   "devDependencies": {
     "@changesets/cli": "^2.29.5",
