--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "mixedbread-ai-provider",
-  "version": "2.0.0-beta.0",
+  "version": "2.0.0",
   "description": "Mixedbread AI Provider for running Mixedbread AI models with Vercel AI SDK",
   "author": "Vivek Patel <me@patelvivek.dev>",
   "license": "MIT",
@@ -46,22 +46,22 @@
     }
   },
   "dependencies": {
-    "@ai-sdk/provider": "beta",
-    "@ai-sdk/provider-utils": "beta"
+    "@ai-sdk/provider": "^2.0.0",
+    "@ai-sdk/provider-utils": "^3.0.1"
   },
   "devDependencies": {
     "@changesets/cli": "^2.29.5",
     "@edge-runtime/vm": "^3.2.0",
-    "@types/bun": "^1.2.17",
+    "@types/bun": "^1.2.20",
     "prettier": "^3.6.2",
     "tsup": "^8.5.0",
     "typescript": "5.5.4",
     "vite-tsconfig-paths": "^4.3.2",
     "vitest": "^2.1.9",
-    "zod": "^3.25.69"
+    "zod": "^3.25.76"
   },
   "peerDependencies": {
-    "zod": "^3.0.0"
+    "zod": "^3.0.0 || ^4.0.0"
   },
   "peerDependenciesMeta": {
     "zod": {
