--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "mixedbread-ai-provider",
-  "version": "3.0.0",
+  "version": "4.0.0",
   "description": "Mixedbread AI Provider for running Mixedbread AI models with Vercel AI SDK",
   "author": "Vivek Patel <me@patelvivek.dev>",
   "license": "MIT",
@@ -46,15 +46,16 @@
     }
   },
   "dependencies": {
-    "@ai-sdk/provider": "^2.0.0",
-    "@ai-sdk/provider-utils": "^3.0.1"
+    "@ai-sdk/provider": "^3.0.0",
+    "@ai-sdk/provider-utils": "^4.0.1"
   },
   "devDependencies": {
-    "@changesets/cli": "^2.29.5",
+    "@ai-sdk/test-server": "^1.0.0",
+    "@changesets/cli": "^2.29.8",
     "@edge-runtime/vm": "^3.2.0",
-    "@types/bun": "^1.2.20",
-    "prettier": "^3.6.2",
-    "tsup": "^8.5.0",
+    "@types/bun": "^1.3.5",
+    "prettier": "^3.7.4",
+    "tsup": "^8.5.1",
     "typescript": "5.5.4",
     "vite-tsconfig-paths": "^4.3.2",
     "vitest": "^2.1.9",
